# myOpenSC

./: .gitignore  Makefile.am  bootstrap  configure.ac
MacOSX/: Makefile.am  Makemodule.am
src/: Makemodule.am
src/libopensc/: Makemodule.am
src/libopensc/cards/acos5/: Makemodule.am  card-acos5.c
src/libopensc/cards/actalis/: Makemodule.am  pkcs15-actalis.c
src/libopensc/cards/akis/: Makemodule.am  card-akis.c
src/libopensc/cards/asepcos/: Makemodule.am  asepcos-init.c  card-asepcos.c
src/libopensc/cards/atrust-acos/: Makemodule.am  card-atrust-acos.c  pkcs15-atrust-acos.c
src/libopensc/cards/authentic/: Makemodule.am  authentic-init.c  authentic.h  card-authentic.c
src/libopensc/cards/belpic/: Makemodule.am  card-belpic.c
src/libopensc/common/: Makemodule.am  libpkcs11.c
src/libopensc/core/: apdu.c  asn1.h  card.c  cardctl.h  cards.h  compression.h  ctx.c  internal.h  log.h  opensc.h  p15card-helper.c  p15card-helper.h  pace.h  pcsc.c  sm.c  sm.h
src/libopensc/pkcs15/: algo.c  cache.c  cert.c  data.c  emulation.c  init.c  init.h  pin.c  pkcs15.c  pkcs15.h  prkey.c  profile.c  profile.h  pubkey.c  sec.c  skey.c
src/libopensc/scconf/: parse.c
src/pkcs11/: Makemodule.am  display.c  framework-pkcs15.c  framework-pkcs15init.c  pkcs11-spy.c  sc-pkcs11.h
src/tools/: Makemodule.am  cardos-tool.c  cryptoflex-tool.c  eidenv.c  iasecc-tool.c  netkey-tool.c  openpgp-tool.c  opensc-explorer.c  opensc-tool.c  piv-tool.c  pkcs11-tool.c  pkcs15-crypt.c  pkcs15-init.c  pkcs15-tool.c  sc-hsm-tool.c  util.h  westcos-tool.c
win32/: Makemodule.am  license.rtf
(+99 files in other folders)
